--- a/CarIsland.css
+++ b/CarIsland.css
@@ -62,13 +62,13 @@ a
 /*------Carosuasdisadoaijl -----*/
 #photoGallery {
   position: center;
-  width: 65%;
+  width: 50%;
   overflow: hidden;
 }
 
 .carousel-image {
-  width: 100%;
-  height: 100%;
+  height: 400px;
+  width: 600px;
   object-fit: cover;
   display: none;
 }
