--- a/CarIsland.css
+++ b/CarIsland.css
@@ -26,9 +26,27 @@ footer
 {
   word-spacing: 15px;
 }
-p, h1, h2 
+
+.mainText
 {
-  display:flex;
+  display: flex;
+  justify-content: center;
+  margin-left: 20px;
+  margin-top: 10px;
+  margin-right: 200px;
+}
+
+.mainHeaderText
+{
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+h1, h2
+{
+  display: flex;
   justify-content: center;
 }
 
@@ -66,7 +84,7 @@ a
 }
 /*------Carosuasdisadoaijl -----*/
 #photoGallery {
-  position: center;
+  position: relative;
   width: 50%;
   overflow: hidden;
 }
@@ -76,8 +94,6 @@ a
   width: 600px;
   object-fit: cover;
   display: none;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .carousel-image.active {
