--- a/CarIsland.css
+++ b/CarIsland.css
@@ -10,6 +10,12 @@ body
   background: #4bc3ffff;
 }
 
+header
+{
+  font-size: 36px;
+  color: rgb(0, 0, 0);
+}
+
 footer
 {
   background: #9fa0a1;
@@ -27,6 +33,15 @@ footer
   word-spacing: 15px;
 }
 
+.headerKitties
+{
+  object-fit: cover;
+  z-index: -5;
+  position: absolute;
+  width: 100%;
+  height: 25%;
+}
+
 .mainText
 {
   display: flex;
@@ -38,8 +53,11 @@ footer
 
 .mainHeaderText
 {
+  
+  font-size: 22px;
   display: flex;
   justify-content: center;
+  color: rgb(0, 0, 0);
   margin-top: 10px;
   margin-bottom: 10px;
 }
