--- a/CarIsland.css
+++ b/CarIsland.css
@@ -51,15 +51,18 @@ footer
   margin-right: 200px;
 }
 
-.mainHeaderText
-{
-  
+.mainHeaderText {
   font-size: 22px;
   display: flex;
   justify-content: center;
   color: rgb(0, 0, 0);
   margin-top: 10px;
+  -webkit-text-stroke: 0.3px #fff;
   margin-bottom: 10px;
+}
+
+h1 {
+  -webkit-text-stroke: 2px #fff;
 }
 
 h1, h2
