--- a/CarIsland.css
+++ b/CarIsland.css
@@ -61,7 +61,9 @@ footer
   margin-bottom: 10px;
 }
 
-h1 {
+h1
+{
+  text-align: center;
   -webkit-text-stroke: 2px #fff;
 }
 
@@ -100,6 +102,24 @@ a
   right: 0;
   text-align: center;
   bottom: 0;
+  align-self: baseline;
+  width: 175px;
+}
+
+.carDialogText
+{
+  font-family: Future;
+  border-radius: 2;
+  border-style: solid;
+  text
+  border-color: white;
+  background: red;
+  color: white;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  bottom: 0;
+  transform: translateY(-11rem);
   align-self: baseline;
   width: 175px;
 }
